Migrate tests to JUnit 5 Jupiter APIs
Replace @Rule with DropwizardExtensionsSupport.
Migrate to Jupiter @ParameterizedTest.
Migrate uses of hamcrest to assertj.
Fixup formatting to satisfy checkstyle.